[tool.poetry]
name = "peachee-dashboard"
version = "0.1.0"
description = ""
authors = ["Alejandro Álvarez Ayllón <alejandro.alvarez@sonarsource.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
