[tool.poetry]
name = "peachee-dashboard"
version = "0.1.0"
description = ""
authors = ["Alejandro Álvarez Ayllón <alejandro.alvarez@sonarsource.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
gql = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
