[tool.poetry]
name = "peachee_dashboard"
version = "0.1.0"
description = ""
authors = ["Alejandro Álvarez Ayllón <alejandro.alvarez@sonarsource.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
gql = "^3.5.0"
coloredlogs = "^15.0.1"
aiohttp = "^3.10.10"

[tool.poetry.scripts]
peachee_dashboard = "peachee_dashboard.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
